# pyright-mcp

./: .gitignore  README.adoc  README.md  pyproject.toml  pyrightconfig.json
.roo/: mcp.json
docs/: index.adoc
src/pyright_mcp/: cli.py  config.py  models.py  runner.py  server_main.py
tests/: conftest.py  test_cli.py  test_config_and_timeout.py  test_integration_mcp.py  test_runner_and_version.py
